# piaic71-hackathon-v2

./: .env.example  .eslintignore  .gitignore  AGENTS.md  README.md  main.py  package-lock.json  package.json  pyproject.toml  vercel.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
frontend/: eslint.config.mjs  next.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/app/: globals.css  page.tsx
frontend/lib/: auth.ts  chat.ts  chatStorage.ts  chatWidget.ts  health.ts  tasks.ts  types.ts
frontend/tests/: auth-page.test.tsx  chat-history.test.tsx  chat-page.test.tsx  chat-tool-calls.test.tsx  chat-widget.test.tsx  page.test.tsx  tasks-auth.test.tsx  tasks-page.test.tsx
history/adr/: 006-jwt-auth.md  2025-12-15-auth-token-policy.md
mcp_server/: app.py  tools.py
promts-provided/: phase1  phase1-command-line-todo-app  phase2  phase2a-frontend-backend  phase2b-neon-sql-init  phase2c-api-expose  phase2f-jwt-better-auth
promts-provided/phase2/: phase2d-frontend  phase2e-linking-apis-to-frontend  phase2g-multi-user-sign-in
promts-provided/phase3/: step1.5  step1.md  step2.md  step3.md  step4.2.md  step4.md  step5  step6  step7.5.md  step7.6.md  step7.md
scripts/: bootstrap.sh  run-backend.sh  run-mcp.sh
specs/001-frontend-health/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-interactive-todo-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py  main.py
tests/: conftest.py
(+450 files in other folders)
