[project]
name = "piaic71-hackathon-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.124.4",
    "greenlet>=3.3.0",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.1.2,<5.0.0",
    "psycopg[binary]>=3.3.2",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "questionary>=2.1.1",
    "rich>=14.2.0",
    "sqlmodel>=0.0.27",
    "typer>=0.20.0",
    "uvicorn>=0.38.0",
    "pyjwt>=2.3.0",
    "openai>=2.14.0",
]
